Fill in the last practice details